# grpc_cpp

./: .gitignore  CMakeLists.txt  README.md
include/protos/: common.pb.cc  common.pb.h
include/protos/api/: student_api.grpc.pb.cc  student_api.pb.h
include/protos/model/: students.pb.cc
logs/: rotating.txt
src/: CMakeLists.txt  common.pb.cc  common.pb.h  main.cpp
src/api/: student_api.grpc.pb.cc  student_api.grpc.pb.h
src/config/: config.h
src/model/: students.pb.cc  students.pb.h
src/utils/: log.cpp  log.h
